[package]
name = "axum_project"
version = "0.1.0"
edition = "2021"



[dependencies]
axum = "0.7"
tokio = { version = "1.35", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tower = "0.4"
sqlx = { version = "0.7", features = ["postgres", "chrono", "runtime-tokio-native-tls"] }
jsonwebtoken = "9"
tracing = "0.1"
tracing-subscriber = "0.3"
redis = { version = "0.23", features = ["tokio-comp"] }
utoipa = "3"
tokio-tungstenite = "0.21"
amqprs = "1" # RabbitMQ client
dotenv = "0.15"
reqwest = { version = "0.11", features = ["json", "native-tls"] }
lettre = { version = "0.11.15", default-features = false, features = [
    "tokio1",
    "tokio1-rustls",
    "smtp-transport",
    "builder",         # <-- unlocks Message and builder API
    "ring",
    "webpki-roots"
] }
chrono = { version = "0.4.31", features = ["serde", "clock"] }
regex = "1.9"
rand = "0.8"
